[package]
name = "ghostmates-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures_codec = "0.4.1"
futures = "0.3.16"
async-std = "1.9.0"
sodiumoxide = "0.2.7"
serde = { version = "1.0", features = ["derive"] }
paillier ="0.2.0"
